# pl

./: .dockerignore  .env.example  .gitignore  COOLIFY_DEPLOY.md  COOLIFY_FIX.md  COOLIFY_READY.md  DOCKER_DEPLOY.md  DOCKER_README.md  Dockerfile  README.md  TELEGRAM_SETUP.md  debug_api.py  docker-compose.yml  docker-start.py  example.py  pyproject.toml  run-web-docker.bat  run-web-docker.sh  session.session  session.session-journal  start_web.py
pl/: __init__.py  cli.py  proxy_api.py  telegram_client.py  web_interface.py  web_main.py
templates/: index.html
