[tool.poetry]
name = "pl"
version = "0.1.0"
description = ""
authors = ["reflaxess123 <reflaxess@yandex.ru>"]
readme = "README.md"
packages = [{include = "pl"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
telethon = "^1.40.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
